Address filesize-not-being-stored bug

--- a/conf/d.conf
+++ b/conf/d.conf
@@ -1,4 +1,14 @@
-qty_files_to_get=50
-qty_files_local=0
-qty_files_system_wide=250
+qty_files_to_get=60
+qty_files_local=10
+qty_files_system_wide=360
 prefix=./Downloads/Downloads_D/
+rfc8987.txt
+rfc8989.txt
+rfc8996.txt
+rfc8997.txt
+rfc8998.txt
+rfc9003.txt
+rfc9007.txt
+rfc9008.txt
+rfc9009.txt
+rfc9010.txt
