--- a/conf/c.conf
+++ b/conf/c.conf
@@ -1,4 +1,14 @@
-qty_files_to_get=50
-qty_files_local=0
-qty_files_system_wide=250
+qty_files_to_get=60
+qty_files_local=10
+qty_files_system_wide=360
 prefix=./Downloads/Downloads_C/
+rfc8976.txt
+rfc8977.txt
+rfc8978.txt
+rfc8979.txt
+rfc8980.txt
+rfc8981.txt
+rfc8982.txt
+rfc8983.txt
+rfc8985.txt
+rfc8986.txt
