--- a/conf/f.conf
+++ b/conf/f.conf
@@ -1,7 +1,7 @@
 qty_files_to_get=60
 qty_files_local=10
 qty_files_system_wide=360
-prefix=./Downloads/Downloads_A/
+prefix=./Downloads/Downloads_F/
 rfc8956.txt
 rfc8957.txt
 rfc8958.txt
