Issue fixes and setup for submission

--- a/conf/b.conf
+++ b/conf/b.conf
@@ -1,4 +1,6 @@
-qty_files_to_get=60
-qty_files_local=0
-qty_files_system_wide=360
+qty_files_to_get=2
+qty_files_local=2
+qty_files_system_wide=4
 prefix=./Downloads/Downloads_B/
+rfc9026.txt
+rfc9035.txt
